# langchain-icebreaker

./: .env.example  LICENSE  README.md  app.py  ice_breaker.py  output_parsers.py  pyproject.toml
agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
chains/: custom_chains.py
mock/: linkedin_phillippbertram.json
templates/: index.html
third_parties/: linkedin.py  twitter.py
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
