[project]
name = "langchain-icebreaker"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "flask>=3.1.1",
    "isort>=6.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "pylint>=3.3.7",
    "tweepy>=4.15.0",
]
